# android

./: .editorconfig  .editorconfig.js  .external  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  Before.Xamarin.Android.sln.targets  CGManifest.json  CLR-Host-Notes.md  CODEOWNERS  COUNTEREXAMPLES.md  Configuration.Java.Interop.Override.props  Configuration.OperatingSystem.props  Configuration.Override.props.in  Configuration.props  DIAGNOSTIC_BUILD_SUMMARY.md  Directory.Build.props  Directory.Build.targets  Dockerfile  IMPLEMENTATION_PLAN.md  INVESTIGATION.md  INVOKERS_MAYBE_NOT_NEEDED_IN_TYPEMAP.md  Inspect.cs  Inspector.csproj  InstantApps.md  Java.Interop.diff  LICENSE  LICENSE.md  Makefile  Makefile_shift-js.js  NativeLinkingTODO.md  NuGet.config  README.md  REVIEW.md  SECURITY.md  THIRD-PARTY-NOTICES.TXT  TODO.md  TYPEMAPS_NESTED_TYPE_ANALYSIS.md  TheoriesToTest.txt  (+47 more)
src/libunwind-xamarin/: CMakeLists.txt  config.h.in  libunwind-xamarin.csproj  libunwind-xamarin.targets
src/monodroid/: CMakeLists.txt  clang-tidy.yaml  config.xml  monodroid.csproj  monodroid.mdproj  monodroid.projitems  monodroid.props  monodroid.targets  mxe-32.cmake.in  mxe-64.cmake.in
src/monodroid/jni/: .gitignore  Android.mk  Application.mk  TODO.md  android-system.cc  android-system.h  android-system.hh  application_dso_stub.cc  assembly-data-provider.hh  basic-android-system.cc  basic-android-system.hh  basic-utilities.cc  basic-utilities.hh  build-info.hh  config.h  cpp-util.hh  cppcompat.h  cppcompat.hh  cpu-arch-detect.c  cpu-arch-detect.cc  cpu-arch.hh  debug-app-helper.cc  debug-app-helper.hh  debug-constants.cc  debug.c  debug.cc  debug.h  debug.hh  designer-assemblies.cc  designer-assemblies.hh  dylib-mono.c  dylib-mono.cc  dylib-mono.h  embedded-assemblies-zip.cc  embedded-assemblies.c  embedded-assemblies.cc  embedded-assemblies.h  embedded-assemblies.hh  external-api.cc  generate-marshaling-data.cc  (+80 more)
src/monodroid/jni/cxx-abi/: string.cc  terminate.cc  vector.cc
src/monodroid/jni/zip/: README  unzip.c  unzip.h
src/monodroid/libstub/: stub-assembly.cc  stub.cc
src/native/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.json.in  CMakeUserPresets.json  native-clr.csproj  native-mono.csproj  native-nativeaot.csproj  native.csproj  native.targets
src/native-clr/java-interop/: CMakeLists.txt
src/native-clr/lz4/: CMakeLists.txt
src/native-clr/startup/: CMakeLists.txt
src/native/archive-dso-stub/: CMakeLists.txt  stub.cc
src/native/clr/: libnet-android.map.txt
src/native/clr/host/: CMakeLists.txt  assembly-store.cc  bridge-processing.cc  dso-loader.cc  fastdev-assemblies.cc  gc-bridge.cc  generate-pinvoke-tables.cc  host-jni.cc  host-shared.cc  host-util.cc  host.cc  internal-pinvokes-clr.cc  internal-pinvokes-shared.cc  internal-pinvokes.cc  jni-remapping.cc  os-bridge.cc  pinvoke-override.cc  pinvoke-tables.include  runtime-environment.cc  runtime-util.cc  typemap.cc  xamarin_getifaddrs.cc
src/native/clr/include/: constants.hh  xamarin-app.hh
src/native/clr/pinvoke-override/: CMakeLists.txt  dynamic.cc  generate-pinvoke-tables.cc  pinvoke-tables.include  precompiled.cc
src/native/clr/runtime-base/: CMakeLists.txt  android-system-shared.cc  android-system.cc  archive-dso-stub-config.hh.in  cpu-arch-detect.cc  internal-pinvokes.cc  logger.cc  timing-internal-exp.cc  timing-internal.cc  (+2 more)
src/native/cmake/: ArchiveDSOStub.cmake
src/native/cmake-config/: cmake-config.csproj
src/native/java-interop/: CMakeLists.txt
src/native/libstub/: CMakeLists.txt
src/native/libunwind/: CMakeLists.txt  libunwind-xamarin.targets
src/native/lz4/: CMakeLists.txt
src/native/mono/: libmono-android.map.txt
src/native/monodroid/: .gitignore  CMakeLists.txt  archive-dso-stub-config.hh.in  debug.cc  embedded-assemblies-zip.cc  embedded-assemblies.cc  embedded-assemblies.hh  generate-pinvoke-tables.cc  globals.cc  globals.hh  internal-pinvoke-api.cc  internal-pinvokes.cc  jni-remapping.cc  machine.config.xml  mono-image-loader.hh  mono-log-adapter.cc  mono_android_Runtime.h  monodroid-glue-designer.cc  monodroid-glue-internal.hh  monodroid-glue.cc  monodroid-networkinfo.cc  monodroid-profiling.cc  monodroid-profiling.hh  monodroid-tracing.cc  monodroid.csproj  osbridge.cc  osbridge.hh  performance-methods.cc  performance-methods.hh  pinvoke-override-api.cc  startup-aware-lock.hh  timezones.cc  timing-internal.cc  timing-internal.hh  timing.cc  timing.hh  xa-internal-api.cc  xamarin-android-app-context.cc  xamarin_getifaddrs.cc  xamarin_getifaddrs.h
src/native/nativeaot/: libnaot-android.map.txt
src/native/perfetto/: CMakeLists.txt
src/native/pinvoke-override/: CMakeLists.txt  common.cc  dynamic.cc  generate-pinvoke-tables.cc  pinvoke-override-api-impl.hh  pinvoke-override-api.hh  pinvoke-tables.include  precompiled.cc
src/native/runtime-base/: CMakeLists.txt  android-system.cc  android-system.hh  cpu-arch-detect.cc  cpu-arch.hh  internal-pinvokes.hh  logger.cc  logger.hh  monodroid-dl.hh  monodroid-profiling.cc  monodroid-profiling.hh  monodroid-state.hh  robin_map.hh  search.hh  shared-constants.hh  startup-aware-lock.hh  strings.hh  timing-internal.cc  timing-internal.hh  timing.hh  util.cc  util.hh
src/native/shared/: CMakeLists.txt  cpp-util.hh  cppcompat.hh  helpers.cc  helpers.hh  log_functions.cc  log_types.hh  new_delete.cc  perfetto_support.cc  perfetto_support.hh
src/native/tracing/: CMakeLists.txt  native-tracing.cc  native-tracing.hh  tracing.hh
src/native/xamarin-app-stub/: CMakeLists.txt  application_dso_stub.cc  xamarin-app.hh
src/native/xamarin-debug-app-helper/: CMakeLists.txt  debug-app-helper.cc
src/sqlite-xamarin/: .gitignore  CMakeLists.txt  Mono.Data.Sqlite.dll.config  build.gradle  local.properties  sqlite-xamarin.csproj  sqlite-xamarin.mdproj  sqlite-xamarin.props  sqlite-xamarin.targets
src/sqlite-xamarin/src-jni/: Android.mk
tools/fastdev/elfcleaner/: CMakeLists.txt
tools/fastdev/maui.link/: CMakeLists.txt  main.c
tools/fastdev/xamarin.cp/: CMakeLists.txt  main.cc
tools/fastdev/xamarin.sync/: CMakeLists.txt  main.cc
(+6128 files in other folders)
